--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 # TODO: add papers by configuration file
 base_url: "https://arxiv.paperswithcode.com/api/v0/papers/"
-user_name: "Vincentqyw"
-repo_name: "cv-arxiv-daily"
+user_name: "zzhbrr"
+repo_name: "mlsys-arxiv-daily"
 show_authors: True
 show_links: True
 show_badge: True
@@ -22,18 +22,14 @@ md_wechat_path: './docs/wechat.md'
 
 # keywords to search
 keywords:
-    "SLAM": 
-        filters: ["SLAM", "Visual Odometry"]
-    "SFM":
-        filters: ["SFM", "Structure from Motion"]
-    "Visual Localization":
-        filters: ["Visual Localization","Camera Localization",
-                  "Camera Re-localisation","Loop Closure Detection",
-                  "visual place recognition","image retrieval"]
-    "Keypoint Detection":
-        filters: ["Keypoint Detection", "Feature Descriptor"]
-    "Image Matching":
-        filters: ["Image Matching", "Keypoint Matching", 
-                  "Line Segment Detection", "Local Feature Matching"]
-    "NeRF":
-        filters: ["NeRF"]
+    "LLM inference": 
+        filters: ["LLM inference", "LLM inference system", "LLM serving", "Large Language Model Serving", "Large Language Model Inference"]
+    "LLM Scheduling":
+        filters: ["LLM Scheduling", "Large Language Model Scheduling"]
+    "MoE":
+        filters: ["MoE", "Mixture of experts"]
+    "Speculative Decoding":
+        filters: ["Speculative Inference", "Speculation", "Speculative Decoding", "Speculative Sampling"]
+    "Multimodal System":
+        filters: ["Diffusion inference", "Diffusion serving", "Multimodal inference", "Multimodal serving", ]
+    
