--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,10 +1,10 @@
-title: CV Arxiv Daily
+title: mlsys Arxiv Daily
 description: Automatically Update CV Papers Daily using Github Actions (Update Every 8th hours)
 show_downloads: true
 
 github:
-  zip_url: https://github.com/Vincentqyw/cv-arxiv-daily
-  another_url: https://github.com/Vincentqyw/cv-arxiv-daily
+  zip_url: https://github.com/zzhbrr/mlsys-arxiv-daily
+  another_url: https://github.com/zzhbrr/mlsys-arxiv-daily
 
 ## add remote theme
 remote_theme: jekyll/minima@v2.5.1
