--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ repo_name: "mlsys-arxiv-daily"
 show_authors: True
 show_links: True
 show_badge: True
-max_results: 20
+max_results: 10
 
 publish_readme: True
 publish_gitpage: True
@@ -23,7 +23,7 @@ md_wechat_path: './docs/wechat.md'
 # keywords to search
 keywords:
     "LLM inference": 
-        filters: ["LLM inference", "LLM inference system", "LLM serving", "Large Language Model Serving", "Large Language Model Inference", "Efficient LLM"]
+        filters: ["LLM Inference", "Long-Context LLM Inference", "LLM serving", "Large Language Model Serving", "Large Language Model Inference", "Efficient LLM"]
     "LLM Scheduling":
         filters: ["LLM Scheduling", "Large Language Model Scheduling"]
     "MoE":
